# Bayer-Dithering

./: 404.html  README.md  app.py  dither.py  dither_web.py  filters.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  python-publish.yml
BayerDithering/: __init__.py  cli.py  core.py  cpu.py  dither.py  gpu.py  matrix.py  utils.py
api/: index.html
cli/: index.html
docs/: api.md  cli.md  examples.md  index.md  installation.md  quickstart.md
examples/: index.html
installation/: index.html
quickstart/: index.html
search/: search_index.json
templates/: display_gif.html  display_image.html  display_video.html  index.html
